Remove Spline watermark

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                 <div class="logo">Denning Neurobyte</div>
 
                 <!-- Hamburger Button -->
-                <button class="theme-toggle"><i class="fas fa-moon"></i><i class="fas fa-sun"></i></button><div class="menu-toggle">
+                <button class="theme-toggle"><i class="fas fa-moon"></i><i class="fas fa-sun"></i></button>
+                <div class="menu-toggle">
                     <span></span>
                     <span></span>
                     <span></span>
@@ -47,9 +48,10 @@
         <!-- 3D Viewer Container -->
         <div class="home-3d">
             <script type="module" src="http://unpkg.com/@splinetool/viewer@1.9.72/build/spline-viewer.js"></script>
-            <spline-viewer class="robot-3d"
-                url="https://prod.spline.design/1dcxapFMBHoCIfHs/scene.splinecode"></spline-viewer>
+            <spline-viewer class="robot-3d" url="https://prod.spline.design/1dcxapFMBHoCIfHs/scene.splinecode"
+                logo-disabled="true"></spline-viewer>
         </div>
+
     </section>
 
     <footer class="footer">
