Fix CSS layout and implement responsive horizontal scrolling

--- a/projects.html
+++ b/projects.html
@@ -45,30 +45,9 @@
         <a href="images/project1.png" target="_blank">View Project</a>
       </div>
       <div class="project-card">
-        <img src="images/project1.png" alt="Project 1" />
+        <img src="images/Pink and Green Watercolor Spa and Beauty Care Banner.png" alt="Project 2" />
         <h3>Hands of Chelo</h3>
-        <a href="images/project1.png" target="_blank">View Project</a>
-      </div>
-      <div class="project-card">
-        <img src="images/project1.png" alt="Project 1" />
-        <h3>Hands of Chelo</h3>
-        <a href="images/project1.png" target="_blank">View Project</a>
-      </div>
-      <div class="project-card">
-        <img src="images/project1.png" alt="Project 1" />
-        <h3>Hands of Chelo</h3>
-        <a href="images/project1.png" target="_blank">View Project</a>
-      </div>
-      <div class="project-card">
-        <img src="images/project1.png" alt="Project 1" />
-        <h3>Hands of Chelo</h3>
-        <a href="images/project1.png" target="_blank">View Project</a>
-      </div>
-      <div class="project-card">
-        <img src="images/project1.png" alt="Project 1" />
-        <h3>Hands of Chelo</h3>
-        <a href="images/project1.png" target="_blank">View Project</a>
-      </div>
+        <a href="images/Pink and Green Watercolor Spa and Beauty Care Banner.png" target="_blank">View Project</a>
     </div>
   </section>
 
