--- a/projects.html
+++ b/projects.html
@@ -49,6 +49,11 @@
         <h3>Hands of Chelo</h3>
         <a href="images/Pink and Green Watercolor Spa and Beauty Care Banner.png" target="_blank">View Project</a>
     </div>
+        <div class="project-card">
+        <img src="images/new.pdf" alt="Project 2" />
+        <h3>Hands of Chelo</h3>
+        <a href="images/new.pdf" target="_blank">View Project</a>
+    </div>
   </section>
 
   <!-- ===== PRICING SECTION ===== -->
