--- a/projects.html
+++ b/projects.html
@@ -51,7 +51,7 @@
     </div>
         <div class="project-card">
         <img src="images/new.png" alt="Project 2" />
-        <h3>Hands of Chelo</h3>
+        <h3>Julie's Beauty</h3>
         <a href="images/new.png" target="_blank">View Project</a>
     </div>
   </section>
